--- a/main.css
+++ b/main.css
@@ -1,37 +1,132 @@
+* {
+  box-sizing: border-box;
+}
 
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
+  padding: 0;
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
-#weather-dashboard {
+#header, #footer, #left-sidebar, #main-content, #right-sidebar {
+  border: 2px solid #00ff00;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+}
+
+#header, #footer {
+  text-align: center;
+  color: #191970;
+  background: linear-gradient(to right, #FF4081, #FFD700, #87CEEB, #191970);
+}
+
+#app-container {
+  display: flex;
   flex-grow: 1;
-  padding: 20px;
+  overflow: hidden;
 }
 
-#city-input-container {
-  margin-bottom: 10px;
-}
-
-#city-input, #search-button {
-  margin-bottom: 10px;
-}
-
-#left-sidebar {
+#left-sidebar, #right-sidebar {
   width: 200px;
   background-color: #1a1a1a;
   color: #fff;
   overflow-y: auto;
+  margin: 10px; /* Add margin to both left and right sides */
 }
 
-#articles-list {
+#left-sidebar {
+  order: -1;
+}
+
+#main-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#footer {
+  text-align: center;
+  background: linear-gradient(to right, #FF4081, #FFD700, #87CEEB, #191970);
+  padding: 10px;
+  margin-top: auto;
+}
+
+/* Common Styles */
+h2, input[type="text"], button {
+  width: 200px;
+  padding: 8px;
+  border: 2px solid #00ff00;
+  border-radius: 5px;
+  background-color: #1a1a1a;
+  color: #fff;
+}
+
+button {
+  background-color: #00ff00;
+  color: #000;
+  cursor: pointer;
+}
+
+ul#history-list {
+  max-height: 150px;
+  overflow-y: auto;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
-#city-images-container img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 10px;
+li {
+  border: 2px solid #00ff00;
+  border-radius: 5px;
+  padding: 8px;
+  margin: 5px 0;
+  background-color: #1a1a1a;
+  color: #fff;
+  height: 36px;
 }
+
+#main-content {
+  padding: 10px;
+  background: linear-gradient(to bottom, #001f3f, #003366);
+  color: #fff;
+}
+
+#search-container, #articles-header {
+  color: #fff;
+  text-align: center;
+}
+
+#articles-header {
+  margin-bottom: 15px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
+  gap: 10px;
+  margin-top: 20px;
+}
+
+/* Add styles for each grid item (image) */
+.grid-container img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+
+@media (max-width: 630px) {
+  #app-container {
+    flex-direction: column;
+  }
+
+  #left-sidebar, #right-sidebar {
+    width: calc(100% - 20px); /* Adjust margin and padding accordingly */
+    margin: 10px;
+    padding: 10px;
+  }
+  }
